--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "three": "^0.152.2"
+    "three": "^0.152.2",
+    "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
